--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -73,6 +73,7 @@
     <script src="static/app/auth/SignupController.js"></script>
     <script src="static/app/auth/PasswordController.js"></script>
     <script src="static/app/auth/mainViewDirective.js"></script>
+    <script src="static/app/auth/MenuController.js"></script>
 
     <script src="static/app/account/AccountController.js"></script>
     <script src="static/app/account/AccountService.js"></script>
