--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -5,14 +5,15 @@
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="weekdays.length">
         <div class="swiper-wrapper">
-          <!-- repeat weekday in weekdays -->
+          <div class="week-loader previous-week-loader">
+            <span>previous week...</span>
+          </div>
           <div class="swiper-slide" ng-repeat="date in weekdays" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = getSubtask(date)">
             <div class="inner-slide-content-container">
               <section id="date" class="date">
                 <h3 class="date-heading" ng-hide="isDatepickerVisible" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
                 <div>
                   <div class="inner-page-content-container" accordion>
-                    <!-- filter weekday, activeWeek -->
                     <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
                       <div class="accordion-body" ng-if="isOpen(task)">
