--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -5,7 +5,7 @@
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="weekdays.length">
         <div class="swiper-wrapper">
-          <div class="week-loader previous-week-loader">
+          <div id="pull-to-previous-week" class="week-loader">
             <span>previous week...</span>
           </div>
           <div class="swiper-slide" ng-repeat="date in weekdays" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index" ng-init="subtask = getSubtask(date)">
@@ -25,6 +25,9 @@
                 </div>
               </section>
             </div>
+          </div>
+          <div id="pull-to-next-week" class="week-loader">
+            <span>next week...</span>
           </div>
         </div>
       </div>
