--- a/frontend/core/src/main/webapp/static/app/notes/uncategorized.html
+++ b/frontend/core/src/main/webapp/static/app/notes/uncategorized.html
@@ -1,4 +1,4 @@
-<section id="notes-recent" class="two-column-grid page" ng-controller="NotesController">
+<section id="notes-uncategorized" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading=homeHeading" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible" class="content-container page-content-container">
