--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -10,7 +10,7 @@
           </div>
           <div class="form-group" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
             <label class="sr-only" for="noteContent">content</label>
-            <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteContent" ng-model="note.content" placeholder="content..." maxlength="1024" expanding-textarea editable-field></textarea>
+            <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteContent" ng-model="note.content" placeholder="content..." expanding-textarea editable-field></textarea>
           </div>
         </form>
       </div>
